--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
+# Unreleased
+- [add][minor] Add support for substitution in all string values of YAML data.
+
 # Version 0.1.0 - 2022-02-22
 - [add][major] Initial release.
