--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-# Unreleased
+# Version 0.1.1 - 2022-03-01
 - [add][minor] Add support for substitution in all string values of YAML data.
 
 # Version 0.1.0 - 2022-02-22
