--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# Unreleased
+- [change][minor] Remove use of new features to be compatible with older Rust versions.
+
 # Version 0.1.1 - 2022-03-01
 - [add][minor] Add support for substitution in all string values of YAML data.
 
