--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-# Unreleased
+# Version 0.1.2 - 2022-03-03
 - [change][minor] Remove use of new features to be compatible with older Rust versions.
 
 # Version 0.1.1 - 2022-03-01
