--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# Unreleased
+- [add][minor] Add a `NoSubstitution` map to allow disabling substitution in generic code.
+
 # Version 0.2.0 - 2022-09-19
 - [change][major] Update `serde_yaml` to version `0.9`.
 
