--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-# Unreleased
+# Version 0.2.1 - 2022-09-19
 - [add][minor] Add a `NoSubstitution` map to allow disabling substitution in generic code.
 
 # Version 0.2.0 - 2022-09-19
