--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# Unreleased
+- [add][minor] Expose error details publically.
+
 # Version 0.2.3 - 2023-07-26
 - [add][minor] Support unsized `VariableMap` objects, such as `&dyn VariableMap`.
 
