--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# Unreleased
+- [fix][minor] Fix recursive substitution in braced default values.
+
 # Version 0.3.0 - 2023-08-31
 - [add][minor] Expose error details publically.
 - [fix][minor] Fix panic when processing multibyte UTF-8 escape sequence.
