--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-# Unreleased
+# Version 0.3.1 - 2024-06-09
 - [fix][minor] Fix recursive substitution in braced default values.
 
 # Version 0.3.0 - 2023-08-31
