--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# Unreleased
+- [add][minor] Add optional support for the `indexmap` crate.
+
 # Version 0.3.3 - 2024-06-29
 - [add][minor] Add support for substitution in all string values of TOML data.
 - [add][minor] Add support for substitution in all string values of JSON data.
