--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# Unreleased
+- [change][patch] Update README for new feature flags.
+
 # Version 0.3.4 - 2024-09-15
 - [add][minor] Add optional support for the `indexmap` crate.
 
