--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+# Unreleased
+- [fix][minor] Fix violation of aliasing rules in `TemplateBuf` and `ByteTemplateBuf`.
+
 # Version 0.3.6 - 2024-12-13
 - [fix][minor] Fix unsound `Clone` and `Drop` implementation of `TemplateBuf` and `ByteTemplateBuf`.
 
